# mandelbrot

./: .gitignore  CMakeLists.txt  colour.cpp  colour.h  complex.cpp  complex.h  main.cpp
